<resources>
    <string name="app_name">ZumiAssignment</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="linked_to_your_bank_account">Linked to your bank account</string>
    <string name="_91">+91</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="checkbox_title">I agree to terms of use and privacy policy of onescore and cibil</string>
    <string name="checkbox_desc">I agree to OneScore\'s Terms of Use and Privacy Policy and authorise to communicate via SMS, Email and WhatsApp. I hereby request for a copy of my Credit Information and/or aggregates on my registered email id or through my OneScore account, and authorise Experian and CIBIL to also provide the same to FPL Technologies Private Limited, on my behalf.</string>
    <string name="score_powered_by">Score Powered by</string>
    <string name="get_otp">Get OTP</string>
    <string name="logo">logo</string>
</resources>