<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/enter_mobile_number"
        android:textColor="#374bdf"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/linked_to_your_bank_account"
        android:textColor="#7f7f7f"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/rounded_search_bg"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/country_code"
            android:layout_width="34dp"
            android:layout_height="38dp"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/_91"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/country_code"
            android:backgroundTint="#f2f2f2"
            android:gravity="center_vertical"
            android:hint="@string/mobile_number"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="0dp"
            android:textSize="14sp" />

    </RelativeLayout>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginHorizontal="25dp"
        android:button="@drawable/checkbox_selector"
        android:fontFamily="@font/inter"
        android:gravity="top"
        android:text="@string/checkbox_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/inter"
        android:text="@string/checkbox_desc"
        android:textColor="#818181"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/inter"
        android:text="@string/score_powered_by"
        android:textColor="#9d9d9d"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="#f2f2f2"
        android:paddingHorizontal="60dp"
        android:paddingVertical="20dp"
        android:text="@string/get_otp"
        android:textAllCaps="false"
        android:textColor="#7f7f7f"
        app:cornerRadius="8dp" />

</LinearLayout>